--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -4,6 +4,7 @@
  <title>{% block title %}{% endblock %}</title>
  <!-- Latest compiled and minified Bootstrap CSS -->
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+ {% block stylesheets %}{% endblock %}
 </head>
 <body>
  <div class="container">
